montrer les joueurs

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,9 @@
 body{
-  background: appworkspace;
+  background: black;
   font-family: 'Gill Sans', Calibri, Arial;
-  color: darkblue;
+  color: rgb(49, 112, 143);
+}
+.well{
+  background: #012;
+  border: 0;
 }
